--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,12 @@
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	</head>
 	<body>
-		<h1> El titulo</h1>
+		<div id="container">
+			<div id="post">
+				<h1> El titulo</h1>
+				<p>Y este es un parrafo muy bonito</p>
+			</div>
+		</div>		
 	</body>
 
 </html>
