--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,8 @@
 			<div id="post">
 				<h1> El titulo</h1>
 				<p>Y este es un parrafo muy bonito</p>
+				<p>Todo un nuevo parrafeo. llevo diciendoselo hace rato y ud no hace caso</p>
+				<p>Y ahora que se supone que vamos a hacer hahahahahahaha</p>
 			</div>
 		</div>		
 	</body>
